--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: #0a0a0a;
+            background: #18181b;
             color: #e0e0e0;
             min-height: 100vh;
         }
 
         .header {
-            background: #0f0f0f;
+            background: #18181b;
             padding: 20px 40px;
-            border-bottom: 1px solid #1a1a1a;
+            border-bottom: 1px solid #27272a;
+            text-align: center;
         }
 
         .logo {
             font-size: 32px;
             font-weight: 700;
             color: #fff;
-            margin-bottom: 10px;
         }
 
 
@@ -49,12 +49,37 @@
         .vehicle-card {
             background: #151515;
             border-radius: 12px;
-            padding: 20px;
+            padding: 30px;
             cursor: pointer;
             transition: all 0.3s;
             border: 1px solid #1a1a1a;
             position: relative;
             overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100px;
+        }
+
+        .vehicle-number {
+            display: inline-block;
+            background: #ffd700;
+            color: #000;
+            padding: 12px 20px;
+            border-radius: 6px;
+            font-weight: 700;
+            font-size: 18px;
+            border: 2px solid #000;
+        }
+
+        .vehicle-number::before {
+            content: 'IND';
+            font-size: 11px;
+            margin-right: 6px;
+            padding: 2px 5px;
+            background: #3b82f6;
+            color: #fff;
+            border-radius: 2px;
         }
 
         .vehicle-card:hover {
@@ -69,89 +94,27 @@
         }
 
         .vehicle-image {
-            width: 100%;
-            height: 140px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin-bottom: 15px;
+            display: none;
         }
 
         .truck-icon {
-            width: 120px;
-            height: 80px;
-            background: linear-gradient(135deg, #2a2a2a 0%, #1a1a1a 100%);
-            border-radius: 8px;
-            position: relative;
+            display: none;
         }
 
         .truck-icon::before {
-            content: '';
-            position: absolute;
-            top: 20%;
-            left: 10%;
-            width: 80%;
-            height: 50%;
-            background: #3a3a3a;
-            border-radius: 4px;
+            display: none;
         }
 
         .truck-icon::after {
-            content: '';
-            position: absolute;
-            bottom: 10%;
-            left: 15%;
-            width: 15px;
-            height: 15px;
-            background: #1a1a1a;
-            border-radius: 50%;
-            box-shadow: 50px 0 0 #1a1a1a;
-        }
-
-        .vehicle-number {
-            display: inline-block;
-            background: #ffd700;
-            color: #000;
-            padding: 8px 16px;
-            border-radius: 6px;
-            font-weight: 700;
-            font-size: 16px;
-            margin-bottom: 10px;
-            border: 2px solid #000;
-        }
-
-        .vehicle-number::before {
-            content: 'IND';
-            font-size: 10px;
-            margin-right: 4px;
-            padding: 2px 4px;
-            background: #0066ff;
-            color: #fff;
-            border-radius: 2px;
+            display: none;
         }
 
         .driver-info {
-            color: #888;
-            font-size: 13px;
-            margin-top: 8px;
+            display: none;
         }
 
         .view-history {
-            margin-top: 15px;
-            color: #0066ff;
-            font-size: 13px;
-            display: flex;
-            align-items: center;
-            gap: 6px;
-        }
-
-        .view-history::after {
-            content: '→';
-            transition: transform 0.3s;
-        }
-
-        .vehicle-card:hover .view-history::after {
-            transform: translateX(4px);
+            display: none;
         }
 
         @media (max-width: 768px) {
@@ -212,6 +175,18 @@
             {
                 number: 'MH12WX8766',
                 link: 'https://track.cautio.xyz/en?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ2ZWhpY2xlX2lkIjoicG9uZGtnemRmaDV2NHBkZXA4M21ucXF3Iiwib3JnYW5pc2F0aW9uX2lkIjoiZmJ0bTVmemZiZm43YWpiM3k2OHpmd3RkIiwiYWN0aXZlX2Zyb20iOiIwMDowMCIsImFjdGl2ZV90byI6IjIzOjMwIiwiaWF0IjoxNzY0ODI1MTM5LCJleHAiOjE3OTYzNjExMzl9.GvGaU4hGFdJbECRX_aoCGbykkJFSq3ROvVnFlbx4rR0'
+            },
+            {
+                number: 'KA05AQ6685',
+                link: 'https://track.cautio.xyz/en?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ2ZWhpY2xlX2lkIjoib3Nzd3RuZ3F1ZTFhYnNsZWVyNG82a3o3Iiwib3JnYW5pc2F0aW9uX2lkIjoiZmJ0bTVmemZiZm43YWpiM3k2OHpmd3RkIiwiYWN0aXZlX2Zyb20iOiIwMDowMCIsImFjdGl2ZV90byI6IjIzOjMwIiwiaWF0IjoxNzY0ODU1ODQzLCJleHAiOjE3OTYzOTE4NDN9.IfwxuD_reAFa8UrzS__EIOvsEk9leZ3M-y7YlGHuxG8'
+            },
+            {
+                number: 'KA05AQ6686',
+                link: 'https://track.cautio.xyz/en?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ2ZWhpY2xlX2lkIjoieTZua2Zlams1N2ZibHF1YzBkaTR3dm5tIiwib3JnYW5pc2F0aW9uX2lkIjoiZmJ0bTVmemZiZm43YWpiM3k2OHpmd3RkIiwiYWN0aXZlX2Zyb20iOiIwMDowMCIsImFjdGl2ZV90byI6IjIzOjMwIiwiaWF0IjoxNzY0ODU1ODg5LCJleHAiOjE3OTYzOTE4ODl9.rt-OY3mVgA2b0BPz4vlNPLOBPHXY5Lx2ddODNuNYevM'
+            },
+            {
+                number: 'KA05AQ3420',
+                link: 'https://track.cautio.xyz/en?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ2ZWhpY2xlX2lkIjoibnJucnRwaGx0czN6M2c3dGxvODhmejZoIiwib3JnYW5pc2F0aW9uX2lkIjoiZmJ0bTVmemZiZm43YWpiM3k2OHpmd3RkIiwiYWN0aXZlX2Zyb20iOiIwMDowMCIsImFjdGl2ZV90byI6IjIzOjMwIiwiaWF0IjoxNzY0ODU3Nzg2LCJleHAiOjE3OTYzOTM3ODZ9.CBMv9rNbzYeYUXvJdnLE3tQeNdibWj1dKxauJA9y45Q'
             }
         ];
 
@@ -223,13 +198,7 @@
             card.onclick = () => window.open(vehicle.link, '_blank');
             
             card.innerHTML = `
-                <div class="status-badge">Offline since 4 months</div>
-                <div class="vehicle-image">
-                    <div class="truck-icon"></div>
-                </div>
                 <div class="vehicle-number">${vehicle.number}</div>
-                <div class="driver-info">No Driver assigned</div>
-                <div class="view-history">View Movement History</div>
             `;
             
             grid.appendChild(card);
